--- a/customer-api/Dockerfile
+++ b/customer-api/Dockerfile
@@ -4,13 +4,13 @@ USER root
 
 WORKDIR /work/
 
-RUN chown 1001 /work 
-RUN chmod "g+rwX" /work 
-RUN chown 1001:root /work
-RUN curl https://repo.zabbix.com/zabbix/3.0/rhel/7/x86_64/zabbix-sender-3.0.9-1.el7.x86_64.rpm --output /tmp/zabbix-sender-3.0.9-1.el7.x86_64.rpm 
-RUN yum update -y
-RUN yum install /tmp/zabbix-sender-3.0.9-1.el7.x86_64.rpm -y
-RUN yum clean all
+RUN chown 1001 /work && \
+    chmod "g+rwX" /work && \
+    chown 1001:root /work && \
+    curl https://repo.zabbix.com/zabbix/3.0/rhel/7/x86_64/zabbix-sender-3.0.9-1.el7.x86_64.rpm --output /tmp/zabbix-sender-3.0.9-1.el7.x86_64.rpm && \ #Zabbix Sender install
+    yum update -y && \
+    yum install /tmp/zabbix-sender-3.0.9-1.el7.x86_64.rpm -y && \
+    yum clean all 
 
 COPY --chown=1001:root target/*-runner /work/application
 
