--- a/ansible-scripts/used-memory.yml
+++ b/ansible-scripts/used-memory.yml
@@ -1,4 +1,4 @@
-- name: Get POD free memory
+- name: Get POD used memory
   hosts: localhost
   tasks:
   - name: OCP Autentication
@@ -12,6 +12,6 @@
   - name: Get PODs
     shell: oc get pods -n api | grep Running | awk {'print $1'}
     register: pods_list  
-  - name: Get free memory
-    shell: oc rsh {{ item }} zabbix_sender -vv -z <zabbix_server_host> -s <zabbix_registered_api>  -k free_memory -o $(oc rsh {{ item }} free | awk '{if(NR==2) print $4}')
+  - name: Get used memory
+    shell: oc rsh {{ item }} zabbix_sender -vv -z <zabbix_server_host> -s <zabbix_registered_api>  -k free_memory -o $(oc rsh {{ item }} free | awk '{if(NR==2) print $3}')
     with_items: "{{ pods_list.stdout_lines }}"
